# pactum-codex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  pactum_backend_spec.md  skills-lock.json
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-cargo-check.txt  task-6-router-tests.txt
.sisyphus/plans/: pactum-backend.md
api/: Dockerfile  README.md  docker-compose.dev.yml
migrations/: 001_user_accounts.sql  002_auth_wallet.sql  003_auth_oauth.sql  004_user_contacts.sql  005_agreement_parties.sql  006_notification_queue.sql  007_agreement_drafts.sql  008_party_invitations.sql  009_agreement_payments.sql  010_user_agreement_counts.sql  011_siws_nonces.sql  012_payment_tx_sig_unique.sql  013_refresh_tokens.sql  014_agreement_payments_add_pda.sql  015_agreement_drafts_add_pda.sql  20240306120000_core_users.sql  20240306120001_agreements.sql  20240306120002_drafts_and_payments.sql  20240306120003_workflow.sql  20240306120004_sweep_config.sql
scripts/: verify_sweep_config.sh
src/: config.rs  error.rs  main.rs  router.rs  solana_types.rs  state.rs
src/handlers/: agreement.rs  auth.rs  draft.rs  invite.rs  payment.rs  upload.rs  user.rs  ws.rs
src/middleware/: auth.rs  wallet_guard.rs
src/services/: crypto.rs  hash.rs  jwt.rs  keypair_security.rs  metadata.rs  notification.rs  program_log.rs  refund.rs  solana.rs  solana_logs.rs  solana_pay.rs  storage.rs
src/workers/: event_listener.rs  expiry_worker.rs  guardrails.rs  keeper.rs  notification_worker.rs  policy.rs  refund_worker.rs  supervisor.rs
tests/: integration_test.rs
(+7 files in other folders)
