[package]
name    = "pactum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum       = { version = "0.8", features = ["multipart", "ws"] }
axum-extra = { version = "0.9" }
tokio      = { version = "1",   features = ["full"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.4"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]}

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
oauth2       = "4"

# Crypto
aes-gcm = "0.10"
sha2    = "0.10"
hmac    = "0.12"
hex     = "0.4"

# Solana
solana-client    = "2.2"
solana-sdk       = "2.2"
spl-token        = "4"
spl-associated-token-account = "2"

# Utilities
uuid    = { version = "1", features = ["v4"] }
chrono  = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config  = "0.14"
base64  = "0.22"
dashmap = "6"
rand    = "0.8"

# HTTP client (OAuth, IPFS, Arweave)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Email
resend-rs = "0.8"

# Additional deps needed by implementation
thiserror = "2"
borsh = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
